kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: model-api-service
spec:
  selector:
    app: model-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
